# CorePilot

./: .gitattributes  .gitignore  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NEXT_STEPS.md  NOTES_LEARNINGS.md  Portable.bat  README.md  REVIEW_REQUEST.md  ROADMAP.md  SECURITY.md  TESTPLAN.md  TROUBLESHOOTING.md  USAGE.md  _check_assets.ps1  _download_llama_win.ps1  agents.py  app.py  auto_qa.py  cleaner_agents.py  cleaner_flow.py  cleaner_tools.py  context_manager.py  daemon.py  ddg.html  diagnose.bat  diagnose.py  field_test.bat  field_test.py  llama_manager.py  manager_agents.py  pipeline_agents.py  pipeline_flow.py  pipeline_parser.py  requirements.txt  router.py  secrets.toml.example  (+11 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: android_companion.md  bug_report.md  feature_request.md  general_question.md  installation_problems.md
Plan/: FINAL_QA.md  GITHUB_TASKS.md  MOBILE_DESKTOP_TEST.md  ROADMAP_DEV.md
mobile/: README.md  _download_engine.ps1  _patch_pyproject.py  android_bridge.py  build_apk.bat  build_apk.py  build_fixed.bat  cloud_api.py  download_engine-no_API.bat  download_engine.bat  install_apk.bat  llama_server.py  main.py  pyproject.toml  requirements.txt  run_dev.bat  setup_engine.bat  update_engine.bat  update_mobile.bat  выберите
tests/: conftest.py  run_all.py  test_daemon_logic.py  test_parsers.py  test_path_safety.py  test_utils_core.py
